fixed gap style

--- a/public/settings/styles.css
+++ b/public/settings/styles.css
@@ -71,7 +71,7 @@ form {
 }
 
 .last-form {
-  gap: 10px;
+  gap: 21px;
 }
 
 .buttons {
